--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat App</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <!-- <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script> -->
+    <link rel="icon" href="/images/favicon.png" type="image/png">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 </head>
@@ -57,10 +58,6 @@
                 token: sender_id
             }
         });
-
-        function chatScoll(){
-            $('#chat-messages').scrollTop($('#chat-messages')[0].scrollHeight);
-        }
 
         //update user status
         //online
@@ -125,7 +122,7 @@
                         }
 
                     }
-                    chatScoll();
+                    $('#chat-messages').scrollTop($('#chat-messages')[0].scrollHeight);
                 })
             });
 
@@ -179,7 +176,8 @@
                             }
                         }
                     });
-                    chatScoll();
+                    //scroll to bottom
+                    $('#chat-messages').scrollTop($('#chat-messages')[0].scrollHeight);
                 } 
                 else {
                     alert('Please select a friend to chat with');
@@ -197,7 +195,8 @@
                     </div>
                     `;
                     $('#chat-messages').append(html);
-                    chatScoll();
+                    //scroll to bottom
+                    $('#chat-messages').scrollTop($('#chat-messages')[0].scrollHeight);
                 }
             });
         });
