--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link rel="stylesheet" href="/css/register-style.css">
+  <link rel="icon" href="/images/favicon.png" type="image/png">
 </head>
 <body>
   <div class="container">
