--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registration Page</title>
+  <title>Registration for Live-Chat</title>
   <link rel="stylesheet" href="/css/register-style.css">
+  <link rel="icon" href="/images/favicon.png" type="image/png">
 </head>
 <body>
   <div class="container">
