--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -83,7 +83,7 @@
             // User data (for demonstration)
             const currentUser = {
                 name: "You",
-                profilePic: "https://via.placeholder.com/30"
+                profilePic: '<%=user.profile%>'
             };
 
             //clicking on friend list
